--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -36,7 +38,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="경도 :"
+                android:text="경도 : "
                 android:textSize="20sp" />
 
             <TextView
@@ -54,7 +56,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="위도 :"
+                android:text="위도 : "
                 android:textSize="20sp" />
 
             <TextView
@@ -72,7 +74,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="압력 :"
+                android:text="압력 : "
                 android:textSize="20sp" />
 
             <TextView
@@ -90,7 +92,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="습도 :"
+                android:text="습도 : "
                 android:textSize="20sp" />
 
             <TextView
@@ -108,7 +110,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="온도 :"
+                android:text="온도 : "
                 android:textSize="20sp" />
 
             <TextView
@@ -126,7 +128,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="최저온도 :"
+                android:text="최저온도 : "
                 android:textSize="20sp" />
 
             <TextView
@@ -144,7 +146,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="최고온도 :"
+                android:text="최고온도 : "
                 android:textSize="20sp" />
 
             <TextView
@@ -154,6 +156,59 @@
                 android:text=""
                 android:textSize="20sp" />
         </LinearLayout>
+
+
+        <android.support.v7.widget.CardView
+            xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/card_view"
+            android:layout_gravity="center"
+            android:layout_width="match_parent"
+            android:layout_marginTop="15dp"
+            android:layout_height="wrap_content"
+            card_view:cardCornerRadius="4dp">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:layout_margin="20dp">
+            <TextView
+                android:id="@+id/info_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity = "top|left"
+                android:text = "검색할 도시의 이름을 입력하세요"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below = "@+id/info_text"
+                android:orientation="horizontal">
+            <android.support.design.widget.TextInputLayout
+                android:id = "@+id/tiSearchCity"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_weight="1"
+               >
+
+                <android.support.v7.widget.AppCompatEditText
+                    android:id = "@+id/etSearchCity"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/search_hint"/>
+            </android.support.design.widget.TextInputLayout>
+            <android.support.design.widget.FloatingActionButton
+                android:id = "@+id/fbSearchCity"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src = "@drawable/ic_search_white_18dp"
+                app:rippleColor="@color/color_ripple_color"
+                app:fabSize="mini"
+                android:layout_below="@id/tiSearchCity"
+                android:layout_gravity = "right"/>
+            </LinearLayout>
+            </RelativeLayout>
+        </android.support.v7.widget.CardView>
 
     </LinearLayout>
 
