--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -20,20 +20,28 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_marginTop="10dp"
+        android:text="city"
         android:textSize="30sp"
-        android:text="city" />
+        />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/tvCityName"
         android:layout_marginTop="20dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+      >
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+       >
 
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            >
 
             <TextView
                 android:layout_width="wrap_content"
@@ -156,57 +164,87 @@
                 android:text=""
                 android:textSize="20sp" />
         </LinearLayout>
+        </LinearLayout>
 
 
-        <android.support.v7.widget.CardView
-            xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
             android:id="@+id/card_view"
-            android:layout_gravity="center"
             android:layout_width="match_parent"
-            android:layout_marginTop="15dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="15dp"
             card_view:cardCornerRadius="4dp">
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_margin="20dp"
                 android:orientation="vertical"
-                android:layout_margin="20dp">
-            <TextView
-                android:id="@+id/info_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity = "top|left"
-                android:text = "검색할 도시의 이름을 입력하세요"/>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below = "@+id/info_text"
-                android:orientation="horizontal">
-            <android.support.design.widget.TextInputLayout
-                android:id = "@+id/tiSearchCity"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_weight="1"
-               >
+                >
 
-                <android.support.v7.widget.AppCompatEditText
-                    android:id = "@+id/etSearchCity"
+                <TextView
+                    android:id="@+id/info_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/search_hint"/>
-            </android.support.design.widget.TextInputLayout>
-            <android.support.design.widget.FloatingActionButton
-                android:id = "@+id/fbSearchCity"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src = "@drawable/ic_search_white_18dp"
-                app:rippleColor="@color/color_ripple_color"
-                app:fabSize="mini"
-                android:layout_below="@id/tiSearchCity"
-                android:layout_gravity = "right"/>
-            </LinearLayout>
+                    android:layout_gravity="top|left"
+                    android:text="검색할 도시의 이름을 입력하세요" />
+
+                <LinearLayout
+                    android:id="@+id/ll_search"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/info_text"
+                    android:orientation="horizontal">
+
+                    <android.support.design.widget.TextInputLayout
+                        android:id="@+id/tiSearchCity"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:layout_weight="1">
+
+                        <android.support.v7.widget.AppCompatEditText
+                            android:id="@+id/etSearchCity"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:hint="@string/search_hint" />
+                    </android.support.design.widget.TextInputLayout>
+
+                    <android.support.design.widget.FloatingActionButton
+                        android:id="@+id/fbSearchCity"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/tiSearchCity"
+                        android:layout_gravity="right"
+                        android:src="@drawable/ic_search_white_18dp"
+                        app:fabSize="mini"
+                        app:rippleColor="@color/color_ripple_color" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/ll_search"
+                    android:orientation="horizontal">
+
+                    <co.moonmonkeylabs.realmsearchview.RealmSearchView
+                        android:id="@+id/search_view"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:layout_weight="1"
+                        app:rsvHint="@string/search_auto_hint" />
+
+                    <android.support.design.widget.FloatingActionButton
+                        android:id="@+id/fbAutoSearchCity"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/search_view"
+                        android:layout_gravity="right"
+                        android:src="@drawable/ic_search_white_18dp"
+                        app:fabSize="mini"
+                        app:rippleColor="@color/color_ripple_color" />
+                </LinearLayout>
             </RelativeLayout>
         </android.support.v7.widget.CardView>
 
